# coloradar-library

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  build.py  demo.ipynb  export-config-template.yaml  export.py  export_config.yaml  tmp_export_config.yaml  version-config.yaml
.github/workflows/: publish.yml
docs/: index.html
docs/doxygen/html/: annotated.html  base__dataset_8h.html  base__dataset_8h__dep__incl.map  base__dataset_8h__dep__incl.md5  base__dataset_8h__incl.map  base__dataset_8h__incl.md5  base__dataset_8h_source.html  base__run_8cpp.html  base__run_8cpp__incl.map  base__run_8cpp__incl.md5  base__run_8cpp_source.html  base__run_8h.html  base__run_8h__dep__incl.map  base__run_8h__dep__incl.md5  base__run_8h__incl.map  base__run_8h__incl.md5  base__run_8h_source.html  base__run_8hpp.html  base__run_8hpp__dep__incl.map  base__run_8hpp__dep__incl.md5  base__run_8hpp_source.html  basic__utils_8cpp.html  basic__utils_8cpp__incl.map  basic__utils_8cpp__incl.md5  basic__utils_8cpp_source.html  basic__utils_8hpp.html  basic__utils_8hpp__dep__incl.map  basic__utils_8hpp__dep__incl.md5  basic__utils_8hpp_source.html  classcoloradar_1_1BaseDevice-members.html  classcoloradar_1_1BaseDevice.html  classcoloradar_1_1BaseDevice__inherit__graph.map  classcoloradar_1_1BaseDevice__inherit__graph.md5  classcoloradar_1_1BaseDevice_a3cc0a9805e326b73078fd0dbc8d06dd3_icgraph.map  classcoloradar_1_1BaseDevice_a3cc0a9805e326b73078fd0dbc8d06dd3_icgraph.md5  classcoloradar_1_1BaseDevice_a763fa860a8aa5b9044ed757a8016de33_icgraph.map  classcoloradar_1_1BaseDevice_a763fa860a8aa5b9044ed757a8016de33_icgraph.md5  classcoloradar_1_1BaseDevice_a8201b26cb9fe0b820966aac6b021f16e_icgraph.map  classcoloradar_1_1BaseDevice_a8201b26cb9fe0b820966aac6b021f16e_icgraph.md5  classcoloradar_1_1BaseDevice_af3d0d0cfd949ba410fa01dcb13cac183_icgraph.map  (+1218 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  concepts_0.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+47 more)
examples/: Dockerfile.demo  README.md  build_maps.py  demo.ipynb  demo_old.ipynb  docker-compose.yaml  export_dataset.py  fov.ipynb  requirements.txt
examples/scripts/: build_maps.py  demo_tools.py  export_dataset.py  sample_maps.py  visualize_run.py
include/: coloradar_run.h  coloradar_tools.h  dataset.h  dataset_configs.h  definitions.h  device.h  internal.h  main.h  radar_configs.h  types.h  utils.h  visualizer.h
include/configs/: dataset_configs.h  device.h  radar_configs.h
include/cuda/: coloradar_cuda.h
include/dataset/: base_dataset.h  base_dataset.hpp  coloradar_dataset.h  coloradar_plus_dataset.h  dataset.h  h5_dataset.h
include/h5/: coloradar_run.h  coloradar_run.hpp  dataset.h
include/hpp/: coloradar_run.hpp  internal.hpp
include/internal_utils/: h5_utils.h  h5_utils.hpp  internal_utils.h  internal_utils.hpp
include/run/: base_run.h  base_run.hpp  coloradar_plus_run.h  coloradar_plus_run.hpp  coloradar_run.h  coloradar_run.hpp  h5_run.h  h5_run.hpp
include/utils/: basic_utils.hpp  octo_pointcloud.hpp  utils.h  visualizer.h
include/utils_hpp/: basic.hpp  octo_pointcloud.hpp  pcl_functions.hpp
rosbag_scripts/: Dockerfile  bag_rgb_to_grayscale.py  docker-compose.yaml  start_viewer.sh
src/: coloradar_run.cpp  dataset.cpp  dataset_configs.cpp  device.cpp  internal.cpp  radar_configs.cpp  visualizer.cpp
src/configs/: dataset_configs.cpp  device.cpp  radar_configs.cpp
src/cuda/: kernels.cu  radar_processing.cu
src/dataset/: base_dataset.cpp  child_data.cpp  child_init.cpp  coloradar_dataset.cpp  coloradar_plus_dataset.cpp  h5_dataset.cpp  h5_dataset_init.cpp  h5_init.cpp  parent_data.cpp  parent_export.cpp  parent_init.cpp
src/h5/: coloradar_run.cpp  dataset_init.cpp
src/internal_utils/: h5_utils.cpp  internal_utils.cpp
src/python_bindings/: cuda.cpp  main.cpp
src/run/: base_run.cpp  coloradar_plus_run.cpp  coloradar_run.cpp  coloradar_run_data.cpp  coloradar_run_init.cpp  h5_data.cpp  h5_run_data.cpp
src/utils/: basic.cpp  basic_utils.cpp  octo_pointcloud.cpp  pcl_functions.cpp  visualizer.cpp
tests/: test_bindings.py  test_coloradar_tools.cpp
utils/: demo_tools.py  tests.py  version_selector.py
